2007-02-27  Arjen Markus  <arjenmarkus@users.sourceforge.net>

	* statistics.man : added description of multivariate linear regression procedures
                    (contribution by Eric Kemp-Benedict)
	* statistics.tcl : sources "mvlinreg.tcl" now
	* mvlinreg.tcl   : original source code from Eric, still needs some polishing
                    (the test case needs to be integrated too)

2006-11-06  Arjen Markus  <arjenmarkus@users.sourceforge.net>

	* fuzzy.test : fixed a dependency on Tcl 8.4 behaviour in one test case
	               (the value of tcl_precision)

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	*

2006-09-26  Andreas Kupries  <andreask@activestate.com>

	* bigfloat.tcl: Bumped version to 1.2.1
	* pkgIndex.tcl:

2006-09-26  Stephane Arnold <sarnold75@users.sourceforge.net>
        * bigfloat.man : fixed a bug in [math::bigfloat::tostr]
        * bigfloat.tcl : when a number is close to zero,
        * bigfloat.test  it takes the precision into account,
        * bigfloat2.tcl  so instead of getting '0' we get '0.e-4'.
        * bigfloat2.test [math::bigfloat::iszero] is not impacted

2006-09-20  Andreas Kupries  <andreask@activestate.com>

	* math.tcl: Bumped version to 1.2.4
	* math.man:
	* qcomplex.man: Bumped version to 1.0.2
	* qcomplex.tcl:
	* fourier.man: Bumped version to 1.0.2
	* fourier.tcl:
	* interpolate.man: Bumped version to 1.0.2
	* interpolate.tcl:
	* linalg.tcl: Bumped version to 1.0.1
	* linalg.man:
	* pkgIndex.tcl:

2006-09-19  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* linalg.tcl: removed print statement (left over from testing leastSquares)

2006-09-15  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* linalg.man: added remark on name conflict with Tk
	              added missing descriptions of several procedures
	* linalg.tcl: added crossproduct to the exported commands
	              implemented normalizeStat