@@ -1,3 +1,8 @@
+2007-03-05  Arjen Markus  <arjenmarkus@users.sourceforge.net>
+
+	* mvlinreg.tcl   : polished the source code (adding standard headers)
+                    Still to do: test cases
+
 2007-02-27  Arjen Markus  <arjenmarkus@users.sourceforge.net>
 
 	* statistics.man : added description of multivariate linear regression procedures
